Styling Hotel component

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Travelsite</title>
-    <link rel="stylesheet" href="./style.css" />
+    <style>
+      *,
+      *::after,
+      *::before {
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+        scrollbar-width: none;
+      }
+
+      html {
+        font-size: 62.5%;
+      }
+
+      body {
+        font-family: "Source Sans Pro", sans-serif;
+        font-weight: 400;
+      }
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
